--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ classifiers = [
 ]
 dependencies = [
     "jupyter_server>=2.4.0,<3",
-    "jupyterlab-eventlistener"
+    "jupyterlab-eventlistener",
+    "jupyter-ai"
 ]
 dynamic = ["version", "description", "authors", "urls", "keywords"]
 
